--- a/src/pages/userList/userList.css
+++ b/src/pages/userList/userList.css
@@ -1,5 +1,5 @@
 .userList{
-    flex: 4;
+    flex: 2;
 
 }
 
@@ -15,4 +15,12 @@
 .userListDelete{
     color: rgb(77, 148, 255);
     cursor: pointer;
+}
+
+.rowOrange{
+    background-color: lightsalmon;
+}
+
+.rowGreen{
+    background-color: lightgreen;
 }
